--- a/www/juego.html
+++ b/www/juego.html
@@ -53,6 +53,7 @@
       </div>
       <img src="img/quetzalito2.png" alt="" hidden="hidden"/ id="ball">
       <img src="img/building.png" alt="" hidden="hidden"/ id="building">
+      <img src="img/building.png" alt="" hidden="hidden"/ id="building2">
       <canvas id="canvas"></canvas>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
