--- a/platforms/android/assets/www/juego.html
+++ b/platforms/android/assets/www/juego.html
@@ -49,9 +49,10 @@
     <body>
       <input type="hidden" id="myInput" value="W3Schools">
       <div class="navigation-bar">
-        <div class="navigation-bar__center" id="puntuacion">Navigation Bar</div>
+        <div class="navigation-bar__center" id="puntuacion">0</div>
       </div>
       <img src="img/quetzalito2.png" alt="" hidden="hidden"/ id="ball">
+      <img src="img/estrella.png" alt="" hidden="hidden"/ id="estrella">
       <img src="img/building.png" alt="" hidden="hidden"/ id="building">
       <img src="img/building.png" alt="" hidden="hidden"/ id="building2">
       <canvas id="canvas"></canvas>
